--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,8 +3,8 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+    'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
@@ -17,4 +17,32 @@ body {
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+}
+
+.country-list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+.country-item {
+  display: flex;
+  align-items: center;
+  margin: 3px 0;
+}
+
+.country-item.title {
+  font-weight: 700;
+}
+
+.country-logo {
+  width: 25px;
+  margin-right: 10px;
+}
+
+.country-name {
+  margin: 0;
+}
+
+.country-name.info {
+  font-size: 30px;
 }
